--- a/01-first-azure-pipelines.yml
+++ b/01-first-azure-pipelines.yml
@@ -4,13 +4,13 @@
 # https://aka.ms/yaml
 
 trigger:
-- main
+- master
 
 pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- script: echo Hello, world! chnaged 
+- script: echo Hello, world! changed again  
   displayName: 'Run a one-line script'
 
 - script: |
